[package]
name = "clarity-lint"
version = "0.1.0"
authors = ["Alexander Keating"]
license = "MIT"
description = "A tool to lint clarity files"
homepage = "https://github.com/alexkeating/clarity-lint"
repository = "https://github.com/alexkeating/clarity-lint"
keywords = ["cli", "clarity", "linting"]
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
clarity-repl = "0.2.0"
serde_json = "1.0.61"
